--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "webpack-4-react-boilerplate",
+  "name": "react-starter-guide",
   "version": "1.0.0",
-  "description": "A simple and complete Webpack 4 React Boilerplate",
+  "description": "A step-to-step guide thrue React basics",
   "main": "index.js",
-  "repository": "https://github.com/user/repository.git",
+  "repository": "https://github.com/FerJSsilva/react-starter-guide",
   "author": "Your Name <your@email.com>",
   "license": "MIT",
   "scripts": {
